# Nu

./: .clang-format  .gitignore  .gitmodules  .test.sh.swp  5.10-prezero.patch  LICENSE  Makefile  README.md  build_all.sh  cloudlab.profile  setup.sh  shared.sh  start_controller.sh  test.sh
app/DataFrame/: .gitignore
app/DataFrame/port/: CMakeLists.txt
app/DataFrame/vanilla/: .gitignore
app/excamera/: Makefile  build_all.sh
app/excamera/alfalfa/: configure.ac
app/excamera/samples/: prepare.sh
app/excamera/scripts/: baseline.py  prepare.py
app/excamera/src/: xc_baseline.cpp  xc_eval.cpp  xc_mem.cpp  xc_qs.cpp
app/imagenet/: .gitignore  Makefile  baseline.cpp  baseline_gpu.conf  baseline_gpu.cpp  baseline_gpu.hpp  build_opencv.sh  calibrator_client.conf  calibrator_server.conf  dataloader.cpp  dataloader.hpp  distributed.cpp  gpu.hpp  image.cpp  image.hpp  memtest.cpp  run.sh  time_calibrator.cpp  train.cpp
app/phoenix++-1.0/include/: container.h  locality.h  processor.h  stddefines.h  synch.h  task_queue.h  thread_pool.h
app/phoenix++-1.0/nu/: Defines.mk  Makefile
app/phoenix++-1.0/orig/: Defines.mk
app/phoenix++-1.0/src/: task_queue.cpp
app/phoenix++-1.0/tests/: Makefile
app/socialNetwork/multi_objs/: CMakeLists.txt  run_multi_nodes.sh  social_network.thrift  up_backend.sh  up_nginx.sh
app/socialNetwork/multi_objs/bench/: CMakeLists.txt  client.cpp
app/socialNetwork/multi_objs/src/: BackEndService.cpp  CMakeLists.txt  HomeTimelineService.cpp  HomeTimelineService.h  MediaService.cpp  MediaStorageService.cpp  MediaStorageService.h  PostStorageService.cpp  PostStorageService.h  SocialGraphService.cpp  SocialGraphService.h  States.cpp  States.hpp  TextService.cpp  TextService.h  UrlShortenService.cpp  UrlShortenService.h  UserMentionService.h  UserService.cpp  UserService.h  UserTimelineService.cpp  UserTimelineService.h  utils.cpp  utils.h
app/socialNetwork/multi_proclets/: build.sh  down_backend.sh  down_nginx.sh
app/socialNetwork/orig/: .gitignore  CMakeLists.txt  build.sh  docker-compose-swarm.yml  docker-compose.yml  install_docker.sh  run_single_node.sh
app/socialNetwork/orig/cmake/: Findthrift.cmake
app/socialNetwork/orig/config/: service-config.json
app/socialNetwork/orig/src/: CMakeLists.txt
app/socialNetwork/orig/src/Client/: CMakeLists.txt  client.cpp
app/socialNetwork/orig/src/ClientSwarm/: CMakeLists.txt  client_swarm.cpp
app/socialNetwork/quicksand/: .gitignore  CMakeLists.txt  build.sh
app/socialNetwork/quicksand/src/: BackEndService.cpp  BackEndService.hpp  CMakeLists.txt  client.cpp  client.hpp  defs.hpp  initializer.cpp  initializer.hpp  main.cpp  states.cpp  states.hpp  utils.cpp  utils.hpp
app/socialNetwork/quicksand_baseline/: CMakeLists.txt  build.sh
app/socialNetwork/quicksand_baseline/gen-cpp/: BackEndService.cpp  social_network_types.h
app/socialNetwork/quicksand_baseline/nginx-web-server/lua-scripts/wrk2-api/home-timeline/: read.lua
app/socialNetwork/quicksand_baseline/scripts/: init_social_graph.py
app/socialNetwork/quicksand_baseline/src/: BackEndService.cpp  BackEndService.hpp  CMakeLists.txt  client.cpp  client.hpp  main.cpp  utils.hpp
app/socialNetwork/quicksand_baseline/ymls/: home-timeline-redis.yml  post-storage-mongodb.yml  social-graph-mongodb.yml
app/socialNetwork/single_obj/: CMakeLists.txt  build.sh  run_multi_nodes.sh
app/socialNetwork/single_proclet/: down_backend.sh  run_single_node.sh  (+2 more)
bench/: bench_compute_intensity.cpp  bench_controller.cpp  bench_cpu_overloaded.cpp  bench_fake_migration.cpp  bench_fragmentation.cpp  bench_hashtable_timeseries.cpp  bench_migrate.cpp  bench_proclet_call_bw.cpp  bench_proclet_call_lat.cpp  bench_proclet_call_tput.cpp  bench_proclet_logging.cpp  bench_real_cpu_pressure.cpp  bench_real_mem_pressure.cpp  bench_rpc_tput.cpp  bench_thread.cpp  utils.hpp
caladan/: README.md  build.sh
caladan/base/: base.ld  tcache.c
caladan/iokernel/: control.c  defs.h  dpdk.c.rej  hw_timestamp.c.rej  ias.c  ias.h  ias_ht.c  ias_ps.c  ias_rp.c  ias_ts.c  main.c  rx.c  sched.c  sched.h
caladan/ksched/: ksched.c  ksched.h
caladan/runtime/: cfg.c  defs.h  gc.c  ioqueues.c  kthread.c  membarrier.c  memcpy.c  preempt.c  pressure.c  report.c  sched.c  softirq.c  stack.c  switch.S  sync.c  timer.c
caladan/scripts/: setup_machine.sh
exp/: shared.sh
exp/migration_time/: Makefile  main.cpp  run.sh
inc/cereal/: access.hpp  cereal.hpp  macros.hpp
inc/nu/: cereal.hpp  command_line.hpp  commons.hpp  container.hpp  ctrl.hpp  ctrl_client.hpp  ctrl_server.hpp  dis_hash_table.hpp  dis_mem_pool.hpp  exception.hpp  migrator.hpp  pressure_handler.hpp  proclet.hpp  proclet_mgr.hpp  proclet_server.hpp  rem_ptr.hpp  rem_raw_ptr.hpp  rem_shared_ptr.hpp  rem_unique_ptr.hpp  resource_reporter.hpp  rpc_client_mgr.hpp  rpc_server.hpp  runtime.hpp  runtime_alloc.hpp  runtime_deleter.hpp  stack_manager.hpp  type_traits.hpp
profiles/: cloudlab.profile  cloudlab_c6525_25G_nu_4.profile  cloudlab_xl170.profile
scripts/: gen_key.sh  rt.sh  setup.sh  setup_machine.sh  shared.sh  start_rt.sh  stop_rt.sh  transfer_binaries.sh
src/: command_line.cpp  common.cpp  ctrl.cpp  ctrl_client.cpp  ctrl_main.cpp  ctrl_server.cpp  dis_mem_pool.cpp  mem_hook.cpp  migrator.cpp  pressure_handler.cpp  proclet_mgr.cpp  proclet_server.cpp  resource_reporter.cpp  rpc_client_mgr.cpp  rpc_server.cpp  runtime.cpp  stack_manager.cpp
src/utils/: cond_var.cpp  cpu_load.cpp  farmhash.cpp  md5.cpp  mutex.cpp  perf.cpp  rcu_lock.cpp  read_skewed_lock.cpp  rpc.cpp  slab.cpp  thread.cpp  time.cpp  trace_logger.cpp  zipf.cpp
test/: test_cereal.cpp  test_condvar.cpp  test_continuous_migrate.cpp  test_cpu_load.cpp  test_dis_hash_table.cpp  test_dis_mem_pool.cpp  test_fast_path.cpp  test_interproclet.cpp  test_lock.cpp  test_max_num_proclets.cpp  test_migrate.cpp  test_nested_proclet.cpp  test_perf.cpp  test_proclet.cpp  test_rem_raw_ptr.cpp  test_rem_shared_ptr.cpp  test_rem_unique_ptr.cpp  test_slab.cpp  test_slow_path.cpp  test_sync_hash_map.cpp  test_tcp_poll.cpp  test_thread.cpp  test_time.cpp
(+439 files in other folders)
